tests/baselines/reference/parserIfStatement2.errors.txt
==== tests/cases/compiler/parserIfStatement2.ts (1 errors) ====
    if (a) {
        ~
!!! parserIfStatement2.ts(1,5): error TS2095: Cannot find name 'a'.
    }